# deposito_Fidanza

./: requirements.txt
26Agosto/Esercizio1/webscraping_flow/: README.md  Webscraping Flow diagram.html  pyproject.toml
26Agosto/Esercizio1/webscraping_flow/src/webscraping_flow/: main.py
26Agosto/Esercizio1/webscraping_flow/src/webscraping_flow/crews/webscraping_crew/: webscraping_crew.py
26Agosto/Esercizio1/webscraping_flow/src/webscraping_flow/tools/: custom_tool.py
26Agosto/Esercizio2/routing/: README.md  crewai_flow.html  poem.txt  pyproject.toml
26Agosto/Esercizio2/routing/src/routing/: main.py
26Agosto/Esercizio2/routing/src/routing/crews/add_crew/: add_crew.py
26Agosto/Esercizio2/routing/src/routing/tools/: custom_tool.py
26Agosto/Esercizio3/flow/: .gitignore  README.md  crewai_flow.html  generate_docs.bat  generate_docs.ps1  pyproject.toml  requirements.txt
26Agosto/Esercizio3/flow/db/: chroma.sqlite3
26Agosto/Esercizio3/flow/docs/: README.md  dogs1.json  dogs2.json
26Agosto/Esercizio3/flow/docs/dogs_docs/: qa_cani.md
26Agosto/Esercizio3/flow/docs/source/: conf.py  modules.rst
26Agosto/Esercizio3/flow/ethics-docs/: mkdocs.yml
26Agosto/Esercizio3/flow/ethics-docs/docs/ethics/: compliance-metadata.md  deployment.md  functionality.md  general-information.md  human-oversight.md  incident-management.md  lifecycle-management.md  models-and-datasets.md  risk-classification.md  testing-validation.md
26Agosto/Esercizio3/flow/faiss_index_docs/: index.faiss  index.pkl
26Agosto/Esercizio3/flow/faiss_index_sphinx/: index.faiss  index.pkl
26Agosto/Esercizio3/flow/output/: paco_techops.html  rinalda_techops.html  schema.json
26Agosto/Esercizio3/flow/src/flow/: main.py
26Agosto/Esercizio3/flow/src/flow/tools/: docs_tool.py  rag_tool.py  search_tool.py  web_scaper_tool.py
29Agosto/: test_esercizio.py
(+29 files in other folders)
