[project]
name = "webscraping_flow"
version = "0.1.0"
description = "webscraping_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "ddgs>=9.5.4",
]

[project.scripts]
kickoff = "webscraping_flow.main:kickoff"
run_crew = "webscraping_flow.main:kickoff"
plot = "webscraping_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
