[project]
name = "routing"
version = "0.1.0"
description = "routing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "ddgs>=9.5.4",
]

[project.scripts]
kickoff = "routing.main:kickoff"
run_crew = "routing.main:kickoff"
plot = "routing.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
