[project]
name = "flow"
version = "0.1.0"
description = "flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "ddgs>=9.5.4",
    "faiss-cpu>=1.12.0",
    "sphinx>=7.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
kickoff = "flow.main:kickoff"
run_crew = "flow.main:kickoff"
plot = "flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
